add: fields by company complete